--- a/Code/RandomForest_Implementation/random_forest_implementation.ipynb
+++ b/Code/RandomForest_Implementation/random_forest_implementation.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "76bf011e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../2025_A2/train/Features/additional_features.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# traffic_sign_random_forest.py\n",
     "import pandas as pd\n",
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "716e06e4",
    "metadata": {},
    "outputs": [],
@@ -56,10 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e44f060",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 18 candidates, totalling 90 fits\n",
+      "Best CV accuracy : 0.8079445017293395\n",
+      "Best parameters  : {'rf__max_depth': None, 'rf__max_features': 'sqrt', 'rf__n_estimators': 800}\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------------------------------------------------------\n",
     "# 3.  Build a pipeline:  StandardScaler  →  RandomForest\n",
@@ -94,10 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6eb01cc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅  submission.csv written – upload this on Kaggle\n"
+     ]
+    }
+   ],
    "source": [
     "# ------------------------------------------------------------------\n",
     "# 4.  Fit best model on ALL labelled data and predict the test set\n",
@@ -115,11 +141,35 @@
     "\n",
     "print(\"✅  submission.csv written – upload this on Kaggle\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d1f774c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/random_forest.pkl']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# 保存整个 pipeline（包括 StandardScaler + RF）\n",
+    "joblib.dump(best_model, '../models/random_forest.pkl')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MPS-Torch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
