fix train data preparation error, realize stacking model

--- a/Code/CNN_Implementation/cnn_v2.ipynb
+++ b/Code/CNN_Implementation/cnn_v2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "500f6728",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8190427e",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7819caec",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "10fdd751",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "303da8c6",
    "metadata": {},
    "outputs": [
@@ -244,34 +244,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "78/78 [==============================] - 10s 125ms/step - loss: 3.2980 - accuracy: 0.1597 - val_loss: 2.5748 - val_accuracy: 0.3817\n",
+      "78/78 [==============================] - 10s 128ms/step - loss: 3.3609 - accuracy: 0.1221 - val_loss: 2.4647 - val_accuracy: 0.4128\n",
       "Epoch 2/10\n",
-      "78/78 [==============================] - 10s 122ms/step - loss: 2.0191 - accuracy: 0.4902 - val_loss: 1.3761 - val_accuracy: 0.6404\n",
+      "78/78 [==============================] - 10s 127ms/step - loss: 1.6609 - accuracy: 0.5872 - val_loss: 0.9733 - val_accuracy: 0.7651\n",
       "Epoch 3/10\n",
-      "78/78 [==============================] - 10s 122ms/step - loss: 1.1004 - accuracy: 0.7070 - val_loss: 0.7479 - val_accuracy: 0.7961\n",
+      "78/78 [==============================] - 10s 126ms/step - loss: 0.6972 - accuracy: 0.8166 - val_loss: 0.5511 - val_accuracy: 0.8494\n",
       "Epoch 4/10\n",
-      "78/78 [==============================] - 10s 122ms/step - loss: 0.6906 - accuracy: 0.8107 - val_loss: 0.4703 - val_accuracy: 0.8702\n",
+      "78/78 [==============================] - 10s 128ms/step - loss: 0.4019 - accuracy: 0.8919 - val_loss: 0.2478 - val_accuracy: 0.9403\n",
       "Epoch 5/10\n",
-      "78/78 [==============================] - 10s 124ms/step - loss: 0.4486 - accuracy: 0.8775 - val_loss: 0.4301 - val_accuracy: 0.8799\n",
+      "78/78 [==============================] - 10s 130ms/step - loss: 0.2276 - accuracy: 0.9423 - val_loss: 0.1704 - val_accuracy: 0.9567\n",
       "Epoch 6/10\n",
-      "78/78 [==============================] - 10s 125ms/step - loss: 0.3321 - accuracy: 0.9105 - val_loss: 0.2646 - val_accuracy: 0.9287\n",
+      "78/78 [==============================] - 12s 149ms/step - loss: 0.1490 - accuracy: 0.9603 - val_loss: 0.1260 - val_accuracy: 0.9670\n",
       "Epoch 7/10\n",
-      "78/78 [==============================] - 10s 126ms/step - loss: 0.2242 - accuracy: 0.9382 - val_loss: 0.2149 - val_accuracy: 0.9348\n",
+      "78/78 [==============================] - 14s 174ms/step - loss: 0.1207 - accuracy: 0.9686 - val_loss: 0.0893 - val_accuracy: 0.9769\n",
       "Epoch 8/10\n",
-      "78/78 [==============================] - 10s 131ms/step - loss: 0.1718 - accuracy: 0.9522 - val_loss: 0.1239 - val_accuracy: 0.9686\n",
+      "78/78 [==============================] - 11s 139ms/step - loss: 0.0786 - accuracy: 0.9814 - val_loss: 0.0690 - val_accuracy: 0.9844\n",
       "Epoch 9/10\n",
-      "78/78 [==============================] - 12s 157ms/step - loss: 0.1339 - accuracy: 0.9615 - val_loss: 0.0842 - val_accuracy: 0.9798\n",
+      "78/78 [==============================] - 12s 153ms/step - loss: 0.0883 - accuracy: 0.9771 - val_loss: 0.0987 - val_accuracy: 0.9702\n",
       "Epoch 10/10\n",
-      "78/78 [==============================] - 13s 172ms/step - loss: 0.1027 - accuracy: 0.9710 - val_loss: 0.2140 - val_accuracy: 0.9318\n"
+      "78/78 [==============================] - 14s 178ms/step - loss: 0.0614 - accuracy: 0.9834 - val_loss: 0.0427 - val_accuracy: 0.9901\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x132d0190450>"
+       "<keras.callbacks.History at 0x21f74df3f90>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b4468b88",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b2f767fe",
    "metadata": {},
    "outputs": [
@@ -315,9 +315,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18/18 [==============================] - 0s 19ms/step - loss: 0.4528 - accuracy: 0.8761\n",
-      "Validation Loss: 0.45281821489334106\n",
-      "Validation Accuracy: 0.87613844871521\n"
+      "18/18 [==============================] - 0s 19ms/step - loss: 0.2059 - accuracy: 0.9472\n",
+      "Validation Loss: 0.2059212476015091\n",
+      "Validation Accuracy: 0.9471766948699951\n"
      ]
     }
    ],
