--- a/Code/Neural_Networks/Neural_Networks.ipynb
+++ b/Code/Neural_Networks/Neural_Networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,43 +22,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ch_0            float64\n",
-      "ch_1            float64\n",
-      "ch_2            float64\n",
-      "ch_3            float64\n",
-      "ch_4            float64\n",
-      "                 ...   \n",
-      "hog_pca_19      float64\n",
+      "id                int64\n",
       "edge_density    float64\n",
       "mean_b          float64\n",
       "mean_g          float64\n",
       "mean_r          float64\n",
-      "Length: 120, dtype: object\n"
+      "                 ...   \n",
+      "hog_pca_15      float64\n",
+      "hog_pca_16      float64\n",
+      "hog_pca_17      float64\n",
+      "hog_pca_18      float64\n",
+      "hog_pca_19      float64\n",
+      "Length: 121, dtype: object\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# 读取特征数据\n",
-    "color_df = pd.read_csv(os.path.join(train_feature_dir, 'color_histogram.csv')).drop(columns=['image_path'])\n",
-    "hog_df = pd.read_csv(os.path.join(train_feature_dir, 'hog_pca.csv')).drop(columns=['image_path'])\n",
-    "additional_df = pd.read_csv(os.path.join(train_feature_dir, 'additional_features.csv')).drop(columns=['image_path'])\n",
+    "color_df = pd.read_csv(os.path.join(train_feature_dir, 'color_histogram.csv'))\n",
+    "hog_df = pd.read_csv(os.path.join(train_feature_dir, 'hog_pca.csv'))\n",
+    "additional_df = pd.read_csv(os.path.join(train_feature_dir, 'additional_features.csv'))\n",
+    "\n",
+    "def merge(meta):\n",
+    "    return (meta\n",
+    "            .merge(additional_df,  on=\"image_path\")\n",
+    "            .merge(color_df, on=\"image_path\")\n",
+    "            .merge(hog_df,    on=\"image_path\"))\n",
+    "\n",
+    "metadata_df = pd.read_csv(train_metadata_path)\n",
     "\n",
     "# 合并特征\n",
-    "X = pd.concat([color_df, hog_df, additional_df], axis=1)\n",
+    "X = merge(metadata_df).drop(columns=[\"ClassId\", \"image_path\"])\n",
+    "\n",
     "print(X.dtypes)  # 确保所有列都是 float 或 int 类型"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +81,12 @@
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
     "# 划分训练集与验证集\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_scaled, y_encoded, test_size=0.2, random_state=42)"
+    "X_train, X_val, y_train, y_val = train_test_split(X_scaled, y_encoded, test_size=0.1, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -85,64 +94,64 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "69/69 [==============================] - 1s 4ms/step - loss: 3.2987 - accuracy: 0.1528 - val_loss: 2.5752 - val_accuracy: 0.3634\n",
+      "78/78 [==============================] - 1s 4ms/step - loss: 3.2257 - accuracy: 0.1804 - val_loss: 2.4107 - val_accuracy: 0.4044\n",
       "Epoch 2/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 2.3121 - accuracy: 0.3827 - val_loss: 1.6015 - val_accuracy: 0.5692\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 2.1022 - accuracy: 0.4179 - val_loss: 1.4305 - val_accuracy: 0.5811\n",
       "Epoch 3/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 1.6637 - accuracy: 0.5068 - val_loss: 1.1611 - val_accuracy: 0.6512\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 1.5159 - accuracy: 0.5311 - val_loss: 1.0821 - val_accuracy: 0.6758\n",
       "Epoch 4/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 1.3320 - accuracy: 0.5765 - val_loss: 0.9758 - val_accuracy: 0.7022\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 1.2174 - accuracy: 0.6007 - val_loss: 0.9550 - val_accuracy: 0.6903\n",
       "Epoch 5/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 1.1271 - accuracy: 0.6360 - val_loss: 0.8543 - val_accuracy: 0.7231\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 1.0552 - accuracy: 0.6536 - val_loss: 0.8345 - val_accuracy: 0.7468\n",
       "Epoch 6/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 1.0042 - accuracy: 0.6713 - val_loss: 0.7805 - val_accuracy: 0.7568\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.9606 - accuracy: 0.6858 - val_loss: 0.8197 - val_accuracy: 0.7359\n",
       "Epoch 7/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.9031 - accuracy: 0.7036 - val_loss: 0.7375 - val_accuracy: 0.7523\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.8445 - accuracy: 0.7129 - val_loss: 0.7523 - val_accuracy: 0.7468\n",
       "Epoch 8/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.8254 - accuracy: 0.7244 - val_loss: 0.6625 - val_accuracy: 0.7814\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.7829 - accuracy: 0.7386 - val_loss: 0.7084 - val_accuracy: 0.7741\n",
       "Epoch 9/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.7670 - accuracy: 0.7449 - val_loss: 0.6673 - val_accuracy: 0.7842\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.7248 - accuracy: 0.7520 - val_loss: 0.7025 - val_accuracy: 0.7832\n",
       "Epoch 10/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.7286 - accuracy: 0.7556 - val_loss: 0.6154 - val_accuracy: 0.7951\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.6765 - accuracy: 0.7682 - val_loss: 0.6393 - val_accuracy: 0.7741\n",
       "Epoch 11/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.6722 - accuracy: 0.7768 - val_loss: 0.6155 - val_accuracy: 0.7923\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.6416 - accuracy: 0.7811 - val_loss: 0.6178 - val_accuracy: 0.7923\n",
       "Epoch 12/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.6329 - accuracy: 0.7843 - val_loss: 0.5859 - val_accuracy: 0.8106\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.5794 - accuracy: 0.7967 - val_loss: 0.6500 - val_accuracy: 0.7905\n",
       "Epoch 13/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.5942 - accuracy: 0.7957 - val_loss: 0.5760 - val_accuracy: 0.8087\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.5683 - accuracy: 0.8109 - val_loss: 0.6317 - val_accuracy: 0.8051\n",
       "Epoch 14/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.5508 - accuracy: 0.8185 - val_loss: 0.5575 - val_accuracy: 0.8197\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.5452 - accuracy: 0.8158 - val_loss: 0.5852 - val_accuracy: 0.8015\n",
       "Epoch 15/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.5341 - accuracy: 0.8150 - val_loss: 0.5729 - val_accuracy: 0.8024\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4968 - accuracy: 0.8301 - val_loss: 0.5447 - val_accuracy: 0.8106\n",
       "Epoch 16/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.5072 - accuracy: 0.8282 - val_loss: 0.5265 - val_accuracy: 0.8342\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4941 - accuracy: 0.8319 - val_loss: 0.5408 - val_accuracy: 0.8270\n",
       "Epoch 17/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.4758 - accuracy: 0.8392 - val_loss: 0.5315 - val_accuracy: 0.8297\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4756 - accuracy: 0.8384 - val_loss: 0.5613 - val_accuracy: 0.8233\n",
       "Epoch 18/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.4482 - accuracy: 0.8419 - val_loss: 0.5458 - val_accuracy: 0.8233\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4668 - accuracy: 0.8384 - val_loss: 0.5595 - val_accuracy: 0.8233\n",
       "Epoch 19/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.4549 - accuracy: 0.8485 - val_loss: 0.5130 - val_accuracy: 0.8397\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4302 - accuracy: 0.8569 - val_loss: 0.5765 - val_accuracy: 0.8033\n",
       "Epoch 20/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.4270 - accuracy: 0.8565 - val_loss: 0.5323 - val_accuracy: 0.8279\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4395 - accuracy: 0.8490 - val_loss: 0.5381 - val_accuracy: 0.8106\n",
       "Epoch 21/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.3996 - accuracy: 0.8595 - val_loss: 0.5283 - val_accuracy: 0.8224\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.4218 - accuracy: 0.8492 - val_loss: 0.5323 - val_accuracy: 0.8288\n",
       "Epoch 22/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.3844 - accuracy: 0.8688 - val_loss: 0.5270 - val_accuracy: 0.8388\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3792 - accuracy: 0.8751 - val_loss: 0.5066 - val_accuracy: 0.8361\n",
       "Epoch 23/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.3827 - accuracy: 0.8681 - val_loss: 0.5000 - val_accuracy: 0.8443\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3731 - accuracy: 0.8714 - val_loss: 0.5195 - val_accuracy: 0.8525\n",
       "Epoch 24/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.3680 - accuracy: 0.8683 - val_loss: 0.5346 - val_accuracy: 0.8342\n",
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3583 - accuracy: 0.8797 - val_loss: 0.5271 - val_accuracy: 0.8270\n",
       "Epoch 25/25\n",
-      "69/69 [==============================] - 0s 3ms/step - loss: 0.3491 - accuracy: 0.8827 - val_loss: 0.5254 - val_accuracy: 0.8397\n"
+      "78/78 [==============================] - 0s 3ms/step - loss: 0.3692 - accuracy: 0.8700 - val_loss: 0.4959 - val_accuracy: 0.8397\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2ce9b71c650>"
+       "<keras.callbacks.History at 0x29b3a5ce650>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35/35 [==============================] - 0s 1ms/step - loss: 0.5254 - accuracy: 0.8397\n",
+      "18/18 [==============================] - 0s 1ms/step - loss: 0.4959 - accuracy: 0.8397\n",
       "\n",
       "Validation Accuracy: 0.8397\n"
      ]
@@ -184,8 +193,15 @@
    "source": [
     "# 评估验证集准确率\n",
     "val_loss, val_acc = model.evaluate(X_val, y_val)\n",
-    "print(f\"\\nValidation Accuracy: {val_acc:.4f}\")\n",
-    "\n",
+    "print(f\"\\nValidation Accuracy: {val_acc:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 保存模型（可选）\n",
     "model.save('../models/neural_model.h5')"
    ]
