--- a/Code/RandomForest_Implementation/random_forest_implementation.ipynb
+++ b/Code/RandomForest_Implementation/random_forest_implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "76bf011e",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "716e06e4",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "id": "c58dfa74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(X.columns))  # 适用于 DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "9e44f060",
    "metadata": {},
    "outputs": [
@@ -112,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "6eb01cc3",
    "metadata": {},
    "outputs": [
@@ -144,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "d1f774c0",
    "metadata": {},
    "outputs": [
@@ -154,7 +172,7 @@
        "['../models/random_forest.pkl']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
