--- a/Code/RandomForest_Implementation/random_forest_implementation.ipynb
+++ b/Code/RandomForest_Implementation/random_forest_implementation.ipynb
@@ -147,8 +147,7 @@
       "text/html": [
        "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
-       "  --sklearn-color-text: #000;\n",
-       "  --sklearn-color-text-muted: #666;\n",
+       "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
        "  /* Definition of color scheme for unfitted estimators */\n",
        "  --sklearn-color-unfitted-level-0: #fff5e6;\n",
@@ -293,21 +292,12 @@
        "/* Toggleable label */\n",
        "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
-       "  display: flex;\n",
+       "  display: block;\n",
        "  width: 100%;\n",
        "  margin-bottom: 0;\n",
        "  padding: 0.5em;\n",
        "  box-sizing: border-box;\n",
        "  text-align: center;\n",
-       "  align-items: start;\n",
-       "  justify-content: space-between;\n",
-       "  gap: 0.5em;\n",
-       "}\n",
-       "\n",
-       "#sk-container-id-1 label.sk-toggleable__label .caption {\n",
-       "  font-size: 0.6rem;\n",
-       "  font-weight: lighter;\n",
-       "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
        "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
@@ -460,8 +450,7 @@
        "  height: 1em;\n",
        "  width: 1em;\n",
        "  text-decoration: none !important;\n",
-       "  margin-left: 0.5em;\n",
-       "  text-align: center;\n",
+       "  margin-left: 1ex;\n",
        "  /* unfitted */\n",
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-unfitted-level-1);\n",
@@ -564,11 +553,11 @@
        "                (&#x27;rf&#x27;,\n",
        "                 RandomForestClassifier(class_weight=&#x27;balanced&#x27;,\n",
        "                                        n_estimators=500, n_jobs=-1,\n",
-       "                                        random_state=42))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>Pipeline</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()),\n",
+       "                                        random_state=42))])</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;Pipeline<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.pipeline.Pipeline.html\">?<span>Documentation for Pipeline</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>Pipeline(steps=[(&#x27;scaler&#x27;, StandardScaler()),\n",
        "                (&#x27;rf&#x27;,\n",
        "                 RandomForestClassifier(class_weight=&#x27;balanced&#x27;,\n",
        "                                        n_estimators=500, n_jobs=-1,\n",
-       "                                        random_state=42))])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>StandardScaler</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>RandomForestClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.ensemble.RandomForestClassifier.html\">?<span>Documentation for RandomForestClassifier</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestClassifier(class_weight=&#x27;balanced&#x27;, n_estimators=500, n_jobs=-1,\n",
+       "                                        random_state=42))])</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;StandardScaler<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.preprocessing.StandardScaler.html\">?<span>Documentation for StandardScaler</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>StandardScaler()</pre></div> </div></div><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;RandomForestClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.ensemble.RandomForestClassifier.html\">?<span>Documentation for RandomForestClassifier</span></a></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestClassifier(class_weight=&#x27;balanced&#x27;, n_estimators=500, n_jobs=-1,\n",
        "                       random_state=42)</pre></div> </div></div></div></div></div></div>"
       ],
       "text/plain": [
@@ -599,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3a4b6fb1",
    "metadata": {},
    "outputs": [
@@ -681,7 +670,7 @@
       "Macro-average ROC-AUC : 0.9924376878631809\n",
       "\n",
       "5-fold CV accuracy : 0.815 ± 0.005\n",
-      "5-fold CV F1-macro : 0.803 ± 0.012\n"
+      "5-fold CV F1-macro : 0.803 ± 0.011\n"
      ]
     }
    ],
@@ -692,6 +681,7 @@
     "\n",
     "y_pred = model.predict(X_test)\n",
     "y_prob = model.predict_proba(X_test)   # needed for ROC-AUC\n",
+    "\n",
     "\n",
     "# -----------------------------------------------------------\n",
     "# 1.  Basic metrics on the hold-out set\n",
