add kaggle_benchmark in CNN implementation

--- a/Code/dataset_analysis.ipynb
+++ b/Code/dataset_analysis.ipynb
@@ -181,7 +181,7 @@
    "id": "c50c7e40",
    "metadata": {},
    "source": [
-    "### Addiional Feature Distribution"
+    "### Additonal Feature Distribution"
    ]
   },
   {
